# ms-alumno

./: .env .example  ANALISIS_METRICAS.md  Dockerfile  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  spike_tests.js  targets.txt  wsgi.py
app/: __init__.py
app/config/: config.py
app/mapping/: __init__.py  alumno_mapping.py  documento_mapping.py  facultad_mapping.py
app/models/: __init__.py  alumno.py
app/repositories/: __init__.py  alumno_repositorio.py
app/resources/: __init__.py  alumno_resources.py
app/services/: __init__.py  alumno_service.py  facultad_service.py
docker/: .env .example  docker-compose.yml
test/: test_alumno.py  test_documento.py  test_facultad.py
traefik/: docker-compose.yml
validators/: validators.py
