[project]
name= "ms-alumno"
version = "1.0.0"
description = "Microservicio de gestion de alumnos"
requires-python = ">=3.10"

dependencies = [
    "Flask==3.0.3",
    "Flask-SQLAlchemy==3.1.1",
    "Flask-Migrate==4.0.7",
    "psycopg2-binary==2.9.9",
    "marshmallow==3.21.1",
    "python-dotenv==1.0.1",
    "gunicorn==22.0.0"
]

